2005-09-29  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (redirect): always use 'meta refresh' (closes #26).

	* style/default/hikidoc.rb: sync with hikidoc rev.30.
	  allow empty descriptions in definition lists.

2005-09-27  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: sync with hikidoc rev.29.
	  bugfix in parse_plugin.
	  revise URI_RE.

2005-09-26  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/rss-show.rb: use the rss library.

	* style/default/hikidoc.rb: sync with hikidoc rev.27.
	  revise parse_plugin.

2005-09-20  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_link): display
	specified titles in interwikis (closes #25).
	ditto in outer aliases.

	* plugin/00default.rb (toc): return an empty string (closes #24).

2005-09-18  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (replace_auto_link): do nothing
	if @auto_links is empty.
	* style/default/hikidoc.rb: sync with hikidoc rev.25.
	  minimum match in parse_modifier.

2005-09-15  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb (getAmazon): allow hankaku colon in a
	regexp of an item_name.

2005-09-14  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/amazon.rb: follow-up format changing of amazon.com
	and amazon.co.jp.

	* style/default/html_formatter.rb (replace_auto_link): typo.

2005-09-13  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb: disallow a page whose name is '.' or
	'..' (reported by take_tk [Hiki-users:51]).

	* style/default/html_formatter.rb: correct auto links (reported by
	take_tk [Hiki-users:46]).

2005-09-11  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (to_s): 'replace_auto_link'
	after 'replace_link'.
	(replace_auto_link): correct links.

	* misc/plugin/rss.rb (rss): disable @conf.use_plugin in making
	full-text HTML contents (reported by MORIOKA Toru
	[Hiki-dev:01029]).

	* hiki/hiki_formatter.rb (apply_tdiary_theme, tdiary_section):
	move from style/default/html_formatter.rb.
